# tpmp-10gr-kozlovalogunova

./: CMakeLists.txt  CMakeLists.txt.txt  Makefile  README.md
.github/workflows/: coverage.yml  main.yml
database/: FlowerOrangerea.sql
includes/: auth.h  database.h
src/: database.cpp  main.cpp
tests/: test_logic.cpp
